# inventoryManagementSystem-

./: .env.example  .gitignore  API_ENDPOINTS.md  DATABASE_MANAGEMENT.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  RBAC_IMPLEMENTATION.md  README.md  SEEDER_IMPLEMENTATION.md  alembic.ini  fix_all_strings.py  fix_models.py  init_db.py  pyproject.toml  requirements.txt  reset_database.py  seeder.py  setup.py  setup_database.py
app/: cli.py  config.py  database.py  main.py
app/api/: auth.py  backup.py  carts.py  categories.py  customers.py  invoices.py  notifications.py  orders.py  products.py  settings.py  suppliers.py  wishlists.py
app/core/: auth.py  dependencies.py  roles.py  templates.py
app/migrations/: env.py
app/models/: __init__.py  activity_log.py  backup.py  cart.py  category.py  customer.py  invoice.py  notification.py  order.py  product.py  supplier.py  user.py  warehouse.py  wishlist.py
app/repositories/: backup_repository.py  base_repository.py  cart_repository.py  category_repository.py  customer_repository.py  invoice_repository.py  notification_repository.py  order_repository.py  product_repository.py  settings_repository.py  supplier_repository.py  user_repository.py  warehouse_repository.py  wishlist_repository.py
app/schemas/: backup.py  category.py  customer.py  invoice.py  notification.py  order.py  product.py  settings.py  supplier.py  user.py  wishlist.py
app/services/: backup_service.py  cart_service.py  category_service.py  customer_service.py  (+9 more)
tests/: test_auth.py  test_models.py  test_products.py
(+21 files in other folders)
